[workspace]
resolver = "2"
members = [
    "renderer",
]

[workspace.package]
rust-version = "1.69"
edition = "2021"

[workspace.dependencies]
cfg-if="1"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16.1"
winit = "0.28.6"
lazy_static = "1.4.0"
anyhow = "1.0.71"

# wasm32 dependencies
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.63"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[workspace.dependencies.async-std]
version = "1.12"
features = ["attributes", "unstable", "std"]
