# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "darc_renderer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["DarcJC <i@darc.pro>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "darc_render_bin"
path = "src/app/main.rs"
test = true
bench = true

[dependencies]
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
winit.workspace = true
futures.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
async-std.workspace = true
js-sys.workspace = true
bytemuck.workspace = true
bevy.workspace = true
nalgebra.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
]}

[features]
default = []
# webgl = ["wgpu/webgl"]
